<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordsOfAFeather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_game">WordsOfAFeather_StartGame</string>

    <!-- Qingzi -->
    <string name="startgame">Start</string>
    <string name="startgeneralgame">General</string>
    <string name="startadvancedgame">Advanced</string>
    <string name="starthelp">Help</string>
    <string name="homepage">\t\tHomepage</string>
    <string name="setting1">\tSetting</string>
    <string name="ranking1">\tRanking</string>
    <string name="wordlist">\tLook up word list</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="touch_anywhere">Touch Anywhere</string>
    <string name="pagenum1">1/3</string>
    <string name="pagenum2">2/3</string>
    <string name="pagenum3">3/3</string>
    

    <!-- Setting -->
    <string name="reset">Reset\t</string>
    <string name="setting">Setting</string>
    <string name="backBtnDes">back to menu</string>
    <string name="resetBtnDes">reset the game</string>
    <string name="version">version 1.0</string>
    <string name="language">Language</string>
    <string name="language_english">English</string>
    <string name="language_chinese">Chinese</string>
    <string name="sound">Sound</string>
    <string name="sound_on">On</string>
    <string name="sound_off">Off</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_male">MR.</string>
    <string name="avatar_female">MS.</string>

    <!-- GeneralGame -->
    <string name="title_activity_general_game">GeneralGameActivity</string>
    <string name="pauseBtnDes">pause the game, show menu</string>
    <string name="avatar_image">the avatar image for chat</string>
    <string name="question">question</string>
    <string name="answer">answer</string>
    <string name="ansDes">answer background</string>
    <string name="queDes">question background</string>
    <string name="nextBtnDes">show the next question</string>
    <string name="count">Count:\t</string>
    <string name="countNoInitial">0</string>
    <string name="action_resume">Resume</string>
    <string name="action_mainmenu">Main menu</string>
    <string name="action_restart">Restart</string>
    <string name="action_exit">Exit</string>

    <!-- Stage -->
    <string name="stageimage">Stage Image</string>
    <string name="stageNum">Let\'s Go</string>

    <!-- Advanced Game -->
    <string name="title_activity_advanced_game">AdvancedGameActivity</string>
    <string name="gameScore">Score:\t</string>
    <string name="timeInitial">0</string>
    <string name="hintPointWord">Hint:\t</string>
    <string name="hintPoint">0</string>
    <string name="usehintpoint">"Use Hint"</string>
    <string name="hintBtnDes">Use a hint point to remove a wrong answer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stage_activity_male">StageActivityMale</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- The string for the record activity -->

    <string name="record1">record1</string>
    <string name="ranking">Ranking</string>
    <string name="local">Local</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="main_menu_btn">Back To Main Menu</string>
    <string name="title_activity_word_list">WordListActivity</string>

    <!-- The string for the word list activity -->
    <string name="wordlist_board">Word List</string>
    <string name="editwordlist">Edit</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_edit_word_list">EditWordListActivity</string>

    <!-- The string for the edit word list activity -->
    <string name="deletebtn">Delete</string>
    <string name="title_activity_record">RecordActivity</string>
    
    <!-- Pause Menu -->
   <string name="continuegame">Continue</string>
   <string name="exitgame">Exit Game</string>
   <string name="restartgame">Restart</string>
   
   <!-- New added -->
   <string name="learning">For Learning</string>
   <string name="testing">For Testing</string>
    

</resources>
