<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:background="@drawable/pausemenu"
    android:orientation="vertical">

    
    <Button
        android:id="@+id/btn_pause_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuegame"
        android:background="@drawable/start_button" 
        android:textColor="#FFF"
        android:textStyle="italic|bold" 
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    
    <Button
        android:id="@+id/btn_pause_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restartgame"
        android:background="@drawable/start_button" 
        android:textColor="#FFF"
        android:textStyle="italic|bold" 
        android:layout_below="@id/btn_pause_continue"
        android:layout_centerHorizontal="true"/>
    
    <Button
        android:id="@+id/btn_pause_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitgame"
        android:background="@drawable/start_button" 
        android:textColor="#FFF"
        android:textStyle="italic|bold" 
        android:layout_below="@id/btn_pause_restart"
        android:layout_centerHorizontal="true"/>

        



</RelativeLayout>
