<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SettingActivity" >

    <RelativeLayout
        android:id="@+id/settingTop"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top"        
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

            
           	<ImageButton 
	            android:id="@+id/btnback"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:background="@drawable/back_button"
	            android:contentDescription="@string/backBtnDes"/>

	        <TextView
	            android:id="@+id/setting"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:textStyle="bold"
	            android:textSize="18sp"
	            android:text="@string/setting"
	            android:contentDescription="@string/setting" />
      
    </RelativeLayout>
    
    <TableLayout
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settingTop"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/blank"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.1"/>

        
        <TableRow
            android:id="@+id/language" 
            android:layout_weight="0.01"
            android:layout_width="match_parent"
            android:layout_marginBottom="0.7dip"
            android:background="@drawable/white"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
         	<TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/language"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.3"
                android:textColor="#000"
                android:textStyle="italic"
	            android:textSize="18sp"/>
         	<RadioGroup
         	    android:id="@+id/languageRdbGp"
         	    android:layout_width="wrap_content"
         	    android:layout_height="fill_parent"
         	    android:layout_weight="0.7"
         	    android:orientation="horizontal">
         	    <RadioButton
         	        android:id="@+id/languageRdb1"
         	        android:layout_width="wrap_content"
         	        android:layout_height="fill_parent"
         	        android:layout_weight="0.5"
         	        android:text="@string/language_english" 
         	        android:textColor="#000"/>

         	</RadioGroup>        	
        </TableRow>
        
        <TableRow
            android:id="@+id/sound"
            android:layout_weight="0.01"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/white">
          	<TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sound"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.3"
                android:textColor="#000"
                android:textStyle="italic"
	            android:textSize="18sp"/>
         	<RadioGroup
         	    android:id="@+id/soundRdbGp"
         	    android:layout_width="wrap_content"
         	    android:layout_height="fill_parent"
         	    android:layout_weight="0.7"
         	    android:orientation="horizontal">
         	    <RadioButton
         	        android:id="@+id/soundRdb1"
         	        android:layout_width="wrap_content"
         	        android:layout_height="fill_parent"
         	        android:layout_weight="0.5"
         	        android:text="@string/sound_on" 
         	        android:textColor="#000"/>
         	    <RadioButton
         	        android:id="@+id/soundRdb2"
         	        android:layout_width="wrap_content"
         	        android:layout_height="fill_parent"
         	        android:layout_weight="0.5"
         	        android:text="@string/sound_off"
         	        android:textColor="#000"/>
         	</RadioGroup> 
        </TableRow>

        <TableRow
            android:id="@id/blank"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.07"/>
        
     	<TableRow
            android:id="@+id/avatar"
            android:layout_weight="0.01"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/white">
          	<TextView
                android:id="@+id/avatar_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/avatar"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.3"
                android:textColor="#000"
                android:textStyle="italic"
	            android:textSize="18sp"/>
         	<RadioGroup
         	    android:id="@+id/avatarRdbGp"
         	    android:layout_width="wrap_content"
         	    android:layout_height="fill_parent"
         	    android:layout_weight="0.7"
         	    android:orientation="horizontal">
         	    <RadioButton
         	        android:id="@+id/avatarRdb1"
         	        android:layout_width="wrap_content"
         	        android:layout_height="fill_parent"
         	        android:layout_weight="0.5"
         	        android:drawableLeft="@drawable/puffinmale"     	     
         	        android:textColor="#000"/>
         	    <RadioButton
         	        android:id="@+id/avatarRdb2"
         	        android:layout_width="wrap_content"
         	        android:layout_height="fill_parent"
         	        android:layout_weight="0.5"
         	        android:drawableLeft="@drawable/puffinfemale"        	     
         	        android:textColor="#000"/>
         	</RadioGroup>      	    
     	</TableRow>
     	
		<TableRow
            android:id="@id/blank"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.7"/>

		<RelativeLayout
		    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:layout_weight="0.05">
		    <Button
		        android:id="@+id/resetbnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/reset_button"
                android:contentDescription="@string/resetBtnDes"
                android:text="@string/reset"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:gravity="center"/>
		</RelativeLayout>
      
        <TableRow
            android:id="@id/blank"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.05"/>


 	</TableLayout>

</RelativeLayout>
