<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidemenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1920"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/settingtop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settingtop3"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:text="@string/homepage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="88dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingbutton"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="28dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rankingbutton"
        android:layout_marginTop="28dp" >
    </RelativeLayout>

    <Button
        android:id="@+id/settingbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="57dp"
        android:background="@drawable/setting_button"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical"
        android:text="@string/setting1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/rankingbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingbutton"
        android:layout_marginTop="14dp"
        android:background="@drawable/ranking_button"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical"
        android:text="@string/ranking1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/wordlistbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rankingbutton"
        android:layout_marginTop="14dp"
        android:background="@drawable/word_button"
        android:gravity="center_vertical"
        android:text="@string/wordlist"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>